# Jira_extension_for_cursor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  jira-mcp-cursor.code-workspace  pyproject.toml  requirements.txt  start-mcp.sh
.cursor/: 00-project-context.mdc  README.md  mcp.json.example
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  HOW_IT_WORKS.md  JIRA_MCP_INDEX.md  MCP_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/plans/: README.md  plan_jira_mcp_v1.md
src/jira_mcp_cursor/: __init__.py  __main__.py  cli.py
src/jira_mcp_cursor/config/: __init__.py  cursor_installer.py  settings.py  storage.py  wizard.py  wizard_ui.html
src/jira_mcp_cursor/server/: __init__.py  exceptions.py  jira_client.py  server.py
src/jira_mcp_cursor/tools/: __init__.py  analyze_ticket.py  create_ticket.py  get_ticket.py  link_issues.py  list_epics.py  list_tickets.py  update_ticket.py
src/jira_mcp_cursor/utils/: __init__.py  jql_builder.py  ticket_parser.py
tests/: conftest.py  test_cli.py  test_config_storage.py  test_cursor_installer.py  test_e2e.py  test_error_handling.py  test_integration.py  test_jira_client.py  test_performance.py  test_tools.py  test_utils.py  test_wizard.py
