[project]
name = "jira-mcp-cursor"
version = "0.1.0"
description = "Seamless Jira integration for Cursor IDE via Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["jira", "cursor", "mcp", "model-context-protocol", "ai", "integration", "productivity"]
authors = [
    {name = "Jira MCP Contributors", email = "contributors@example.com"}
]
maintainers = [
    {name = "Jira MCP Contributors", email = "contributors@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Office/Business",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/Fintama/Jira_extension_for_cursor"
Documentation = "https://github.com/Fintama/Jira_extension_for_cursor/blob/main/docs/USER_GUIDE.md"
Repository = "https://github.com/Fintama/Jira_extension_for_cursor"
Issues = "https://github.com/Fintama/Jira_extension_for_cursor/issues"
Changelog = "https://github.com/Fintama/Jira_extension_for_cursor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
jira-mcp = "jira_mcp_cursor.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "ci_critical: Critical tests that must run in CI pipeline",
]
asyncio_mode = "auto"

